--- a/styles/about.scss
+++ b/styles/about.scss
@@ -10,6 +10,8 @@
   }
 
   #about-tab {
+    width: 100%;
+
     .about-tabs {
       width: 100%;
 
@@ -59,6 +61,10 @@
 
       p {
         padding: 0.8rem 0;
+      }
+
+      img.project-timeline {
+        width: 100%;
       }
     }
   }
