--- a/styles/index.css
+++ b/styles/index.css
@@ -214,27 +214,47 @@ header #top-strip-container #top-strip #navigation-wrapper .extra-menu-links-wra
 }
 
 header #menu-wrapper .mobile-menu-container {
-  padding: 8rem 2rem 2rem 2rem;
   background: #F0EFEFB5;
   width: 100%;
+  position: relative;
 }
 
-header #menu-wrapper .mobile-menu-container .mobile-menu-links {
+header #menu-wrapper .mobile-menu-container #mobile-menu-close {
+  position: absolute;
+  right: 2rem;
+  top: 2rem;
+}
+
+header #menu-wrapper .mobile-menu-container .mobile-menu-links-wrapper {
+  width: 100%;
+  height: 100%;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+}
+
+header #menu-wrapper .mobile-menu-container .mobile-menu-links-wrapper .mobile-menu-links {
   text-align: center;
 }
 
-header #menu-wrapper .mobile-menu-container .mobile-menu-links .mobile-menu-link {
+header #menu-wrapper .mobile-menu-container .mobile-menu-links-wrapper .mobile-menu-links .mobile-menu-link {
   padding: 0.8rem 0;
   font-size: 1.5rem;
   text-transform: uppercase;
   color: #003865;
 }
 
-header #menu-wrapper .mobile-menu-container .mobile-menu-links .mobile-menu-link:visited {
+header #menu-wrapper .mobile-menu-container .mobile-menu-links-wrapper .mobile-menu-links .mobile-menu-link:visited {
   color: #fff;
 }
 
-header #menu-wrapper .mobile-menu-container .mobile-menu-links .mobile-menu-link::after, header #menu-wrapper .mobile-menu-container .mobile-menu-links .mobile-menu-link::before {
+header #menu-wrapper .mobile-menu-container .mobile-menu-links-wrapper .mobile-menu-links .mobile-menu-link::after, header #menu-wrapper .mobile-menu-container .mobile-menu-links-wrapper .mobile-menu-links .mobile-menu-link::before {
   content: "-";
   color: #fff;
   margin: 0 0.2rem;
